--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Personal Site</title>
+    <link rel="stylesheet" href="/main.css" title="CSS" type="text/css" />
   </head>
   <body>
-    <h1>About Me!</h1>
+    <h1 id="header">About Me!</h1>
+    <a href="/">Home</a> <a href="/blog">My blog</a>
+    <p>Here's some stuff to know.</p>
   </body>
 </html>
