--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Personal Site</title>
+    <link rel="stylesheet" href="/main.css" title="CSS" type="text/css" />
   </head>
   <body>
-    <h1>Welcome!</h1>
+    <h1 id="header">Welcome!</h1>
+    <a href="/about">About Me</a> <a href="/blog">My blog</a>
   </body>
 </html>
